# Statistical-Arbitrage-Simulator

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
analysis/: __init__.py  metrics.py
auth/: __init__.py  authentication.py
backtest/: __init__.py  backtester.py  enhanced_backtester.py
data/: all_trades.csv  download_data.py  price_data.csv  zscore_signals.csv
data/signals/: AAPL_MSFT_signals.csv  JPM_V_signals.csv  MSFT_META_signals.csv  V_NVDA_signals.csv
database/: __init__.py  init.sql  models.py
notifications/: __init__.py  alerts.py
optimization/: parameter_optimization.py
pairs/: __init__.py  find_pairs.py
risk/: risk_management.py
signals/: __init__.py  zscore_signal.py
tests/: __init__.py  conftest.py  test_backtester.py  test_metrics.py  test_pairs.py  test_transaction_costs.py
trading/: __init__.py  paper_trading.py  transaction_costs.py
utils/: logging_config.py
